--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
         "bpf.h": "c",
         "array": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "perf_event.h": "c",
+        "types.h": "c",
+        "byteorder.h": "c",
+        "ioctl.h": "c",
+        "libbpf.h": "c"
     }
 }
